add github link to map app, move style to style.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,64 +8,6 @@
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
     <link rel="stylesheet" href="style.css">
-    <style>
-      html, body, #map {
-        height: 100%;
-        margin: 0;
-      }
-      /* Colorbar styles */
-      .leaflet-colorbar {
-        background: rgba(255, 255, 255, 0.85);
-        border-radius: 6px;
-        padding: 10px 14px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-        pointer-events: none;
-      }
-      .leaflet-colorbar .colorbar-gradient {
-        width: 180px;
-        height: 14px;
-        background: linear-gradient(to right, #1f1a85, #3f6fcf, #e8e8e8, #d45a3a, #7d0c02);
-        border-radius: 3px;
-      }
-      .leaflet-colorbar .colorbar-labels {
-        display: flex;
-        justify-content: space-between;
-        width: 180px;
-        margin-top: 4px;
-        font-size: 11px;
-        font-family: sans-serif;
-        color: #333;
-      }
-      /* Debug panel */
-      #debug {
-        position: fixed;
-        top: 10px;
-        right: 10px;
-        background: rgba(0, 0, 0, 0.8);
-        color: #0f0;
-        padding: 10px;
-        border-radius: 4px;
-        font-family: monospace;
-        font-size: 12px;
-        max-width: 400px;
-        max-height: 300px;
-        overflow-y: auto;
-        z-index: 1000;
-        display: none; /* Hidden by default, toggle with '?' key */
-      }
-      #debug.visible {
-        display: block;
-      }
-      #debug .error {
-        color: #f00;
-      }
-      #debug .success {
-        color: #0f0;
-      }
-      #debug .info {
-        color: #0ff;
-      }
-    </style>
   </head>
   <body>
     <div id="map"></div>
@@ -156,6 +98,32 @@
         }
       });
 
+      // --- GitHub Link Control ---
+      const GitHubLink = L.Control.extend({
+        options: {
+          position: 'bottomleft'
+        },
+        onAdd: function () {
+          const container = L.DomUtil.create('div', 'leaflet-github');
+          container.innerHTML = `
+            <a href="https://github.com/gcaria/parcelas" target="_blank" rel="noopener noreferrer">
+              <svg height="16" width="16" viewBox="0 0 16 16" style="vertical-align:middle; margin-right:5px;">
+                <path fill="#333" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38
+                  0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+                  -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2
+                  -3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82
+                  .64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08
+                  2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01
+                  1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+              View on GitHub
+            </a>
+          `;
+          return container;
+        }
+      });
+
+
       // --- Create map ---
       debugLog('Initializing map...', 'info');
       const map = L.map("map").setView([-39.28, -72.25], 8);
@@ -204,9 +172,11 @@
       mosaicLayer.on('loading', () => debugLog('Mosaic layer loading...', 'info'));
       mosaicLayer.on('load', () => debugLog('Mosaic layer load complete', 'success'));
 
-      // Add colorbar control
       debugLog('Adding colorbar control...', 'info');
       new ColorBar().addTo(map);
+
+      debugLog('Adding github link...', 'info');
+      new GitHubLink().addTo(map);
 
       // Log map events
       map.on('zoomend', () => debugLog(`Zoom level: ${map.getZoom()}`, 'info'));
